--- a/ci-cd-demo/.github/workflows/dev.yml
+++ b/ci-cd-demo/.github/workflows/dev.yml
@@ -8,10 +8,22 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.10
-      - run: pip install -r requirements.txt
-      - run: echo "Run tests here"
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run mock tests
+        run: |
+          echo "Running tests..."
+          echo "Pretend we ran some tests and they passed"
